# MEAc__

./: CMakeLists.txt  README.md
src/: Data.cpp  Data.h  MEA.cpp  MEA.h  Network.cpp  Network.h  PythonAPI.cpp  PythonAPI.h  StackSignal.cpp  StackSignal.h  VecFloat.h  Vue.cpp  Vue.h  config.h  main.cpp  stack.h  tcp.cpp  tcp.h  utils.cpp  utils.h  windowMode.cpp  windowMode.h
src/dummy/: SimpleNeuralNetwork.cpp  SimpleNeuralNetwork.h  main.cpp  tcp_dummy.cpp  tcp_dummy.h
